# fastapi-sample

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  alembic.test.ini  pyproject.toml  requirements.txt  setup_poetry.py  tox.ini
.claude/memory/: MEMORY.md
.claude/memory/feedback/: coding-conventions.md  testing.md
.claude/memory/project/: project-setup.md
.claude/memory/reference/: api-endpoints.md  database-schema.md  environment-config.md
app/: backend_pre_start.py  config.py  crud.py  main.py  models.py  tests_pre_start.py  utils.py
app/alembic/: README  env.py
app/alembic/versions/: 482d25a6fc5d_reset_db.py  5bedd612693f_add_integration_configs.py  a1b2c3d4e5f6_add_owner_id.py  a1b2c3d4e5f7_add_feature_flags.py  e7562edf08a2_payments.py  f1a2b3c4d5e6_add_user_scopes.py  g1h2i3j4k5l6_add_client_credentials.py  h1i2j3k4l5m6_add_assignments.py  m1n2o3p4q5r6_enable_all_feature_flags.py  n2o3p4q5r6s7_add_flags_admin_flag.py  n3o4p5q6r7s8_add_group_leader_to_assignments.py
app/api/: deps.py  main.py
app/api/routes/: announcements.py  church_services.py  client_credentials.py  feature_flags.py  google.py  health.py  integrations.py  items.py  login.py  media.py  members.py  payments.py  private.py  scheduler.py  user_scopes.py  users.py  utils.py  video_uploads.py
app/core/: db.py  logging.py  rate_limiter.py  result.py  scopes.py  security.py
app/repositories/: assignment_repo.py  feature_flag_repo.py  integration_repo.py  media_repo.py  payment_repo.py  user_repo.py  user_scope_repo.py  video_upload_repo.py
app/requests/: assignment_request.py  church_service_request.py  feature_flag_request.py  integration_request.py  media_request.py  payment_request.py  video_request.py  video_upload_request.py
app/responses/: add_video_response.py  assignment_response.py  feature_flag_response.py  integration_response.py  media_response.py  payment_response.py  video_upload_response.py
app/services/: auth_service.py  church_meeting_service.py  feature_flag_service.py  integration_service.py  media_service.py  payment_service.py  scheduler_service.py
security_keys/: private_dec.pem  public_key.pem
tests/: conftest.py
tests/api/routes/: announcements_test.py  church_services_test.py  client_credentials_test.py  google_test.py  health_test.py  integrations_test.py  items_test.py  login_test.py  media_test.py  members_test.py  oauth2_flows_test.py  payments_test.py  private_test.py  scheduler_test.py  user_scopes_test.py  users_test.py  utils_test.py  video_uploads_test.py
tests/crud/: __init__.py  user_test.py
tests/models/: test_token_models.py
tests/repositories/: README.md  conftest.py  media_repo_simple_test.py  standalone_test_media_repo.py  test_media_repo.py
tests/scripts/: backend_pre_start_test.py  test_pre_start_test.py
tests/utils/: item.py  user.py  utils.py
