[project]
name = "app"
version = "0.1.0"
description = "Application for managing backend for AFC Sacramento"
authors = [
    {name = "humulissw",email = "you@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic[email] (>=2.12.5,<3.0.0)",
    "locust (>=2.42.6,<3.0.0)",
    "uvicorn[standard] (>=0.40.0,<0.41.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pymysql (>=1.1.2,<2.0.0)",
    "mysql-connector-python (>=9.5.0,<10.0.0)",
    "fastapi[standard]<1.0.0,>=0.114.2",
    "python-multipart<1.0.0,>=0.0.7",
    "email-validator<3.0.0.0,>=2.1.0.post1",
    "passlib[bcrypt]<2.0.0,>=1.7.4",
    "tenacity<9.0.0,>=8.2.3",
    "emails<1.0,>=0.6",
    "jinja2<4.0.0,>=3.1.4",
    "alembic<2.0.0,>=1.12.1",
    "httpx<1.0.0,>=0.25.1",
    "psycopg[binary]<4.0.0,>=3.1.13",
    "sqlmodel<1.0.0,>=0.0.21",
    # Pin bcrypt until passlib supports the latest
    "bcrypt==4.3.0",
    "pydantic-settings<3.0.0,>=2.2.1",
    "pyjwt[crypto] (>=2.11.0,<3.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "pwdlib[argon2] (>=0.3.0,<0.4.0)",
    "authlib (>=1.6.7,<2.0.0)",
    "jq (>=1.11.0,<2.0.0)",
    "auth0-server-python (>=1.0.0b8,<2.0.0)",
    "asyncmy (>=0.2.11,<0.3.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "stripe (>=13.0.0,<14.0.0)",
    "cryptography (>=42.0.0,<44.0.0)",
    "mariadb[binary,pool] (>=2.0.0rc2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=60"

[tool.coverage.run]
source = ["app"]
omit = [
    "app/tests*",
    "app/auth0sample*",
    "app/backend_pre_start*",
    "app/tests_pre_start*",
    "app/initial_data*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]


[tool.alembic]

# path to migration scripts.
# this is typically a path given in POSIX (e.g. forward slashes)
# format, relative to the token %(here)s which refers to the location of this
# ini file
script_location = "%(here)s/alembic"

# template used to generate migration file names; The default value is %%(rev)s_%%(slug)s
# Uncomment the line below if you want the files to be prepended with date and time
# see https://alembic.sqlalchemy.org/en/latest/tutorial.html#editing-the-ini-file
# for all available tokens
# file_template = "%%(year)d_%%(month).2d_%%(day).2d_%%(hour).2d%%(minute).2d-%%(rev)s_%%(slug)s"
# Or organize into date-based subdirectories (requires recursive_version_locations = true)
# file_template = "%%(year)d/%%(month).2d/%%(day).2d_%%(hour).2d%%(minute).2d_%%(second).2d_%%(rev)s_%%(slug)s"

# additional paths to be prepended to sys.path. defaults to the current working directory.
prepend_sys_path = [
    "."
]

# timezone to use when rendering the date within the migration file
# as well as the filename.
# If specified, requires the tzdata library which can be installed by adding
# `alembic[tz]` to the pip requirements.
# string value is passed to ZoneInfo()
# leave blank for localtime
# timezone =

# max length of characters to apply to the "slug" field
# truncate_slug_length = 40

# set to 'true' to run the environment during
# the 'revision' command, regardless of autogenerate
# revision_environment = false

# set to 'true' to allow .pyc and .pyo files without
# a source .py file to be detected as revisions in the
# versions/ directory
# sourceless = false

# version location specification; This defaults
# to <script_location>/versions.  When using multiple version
# directories, initial revisions must be specified with --version-path.
# version_locations = [
#    "%(here)s/alembic/versions",
#    "%(here)s/foo/bar"
# ]


# set to 'true' to search source files recursively
# in each "version_locations" directory
# new in Alembic version 1.10
# recursive_version_locations = false

# the output encoding used when revision files
# are written from script.py.mako
# output_encoding = "utf-8"

# This section defines scripts or Python functions that are run
# on newly generated revision scripts.  See the documentation for further
# detail and examples
# [[tool.alembic.post_write_hooks]]
# format using "black" - use the console_scripts runner,
# against the "black" entrypoint
# name = "black"
# type = "console_scripts"
# entrypoint = "black"
# options = "-l 79 REVISION_SCRIPT_FILENAME"
#
# [[tool.alembic.post_write_hooks]]
# lint with attempts to fix using "ruff" - use the module runner, against the "ruff" module
# name = "ruff"
# type = "module"
# module = "ruff"
# options = "check --fix REVISION_SCRIPT_FILENAME"
#
# [[tool.alembic.post_write_hooks]]
# Alternatively, use the exec runner to execute a binary found on your PATH
# name = "ruff"
# type = "exec"
# executable = "ruff"
# options = "check --fix REVISION_SCRIPT_FILENAME"

# Ruff linter configuration
[tool.ruff.lint.per-file-ignores]
"app/api/routes/login.py" = ["E712"]
"app/api/routes/google.py" = ["E712"]

# Bandit security linter configuration
[tool.bandit]
exclude_dirs = [
    'src/be/app/alembic/'
]
skips = [
    "B101",  # assert_used - fine in tests and safety checks
    "B106",  # hardcoded_password_funcarg - dummy OAuth credentials in demo code
    "B201",  # flask_debug_true - sample auth0 app
    "B404",  # subprocess import - needed for setup_poetry.py
    "B310",  # urllib_open - needed for setup_poetry.py
    "B603",  # subprocess_without_shell - needed for setup_poetry.py
    "B607",  # process_beginning_with_partial_path - needed for setup_poetry.py
    "B311",  # random - fine for test code
    "B110",  # try_except_pass - intentional pass for graceful fallback
]

[tool.poetry.dependencies]
mariadb = {allow-prereleases = true}

[tool.poetry.group.dev.dependencies]
mypy = ">=2.0.0,<3.0.0"
flake8 = ">=6.0.0,<8.0.0"
